# UoL-UI-groupwork

./: CMakeLists.txt  README.md  main.cpp  resources.qrc  water_quality.cpp  water_quality.hpp
html/: fmap.html  map.html
include/: dataset.hpp  mainwindow.h  pollutant1.h  water_quality.hpp
include/pages/: fluor_stats.hpp  fluor_window.hpp  home_window.hpp  mainwindow.h  overview_window.hpp  page1_window.hpp  page2_window.hpp  page3_window.hpp  pollutant1.h
src/: dataset.cpp  mainwindow.cpp  mainwindow.ui  pollutant1.cpp  water_quality.cpp
src/pages/: fluor_stats.cpp  fluor_window.cpp  home_window.cpp  mainwindow.cpp  overview_window.cpp  page1_window.cpp  page2_window.cpp  page3_window.cpp  pollutant1.cpp
translations/: zh_CN.qm  zh_CN.ts
